--- a/index.html
+++ b/index.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <title>My First Webpage</title>
-  </head>
-
-  <body>
-    <h1>This is a heading 1</h1>
-    <h2>This is a heading 2</h2>
-    <h3>This is a heading 3</h3>
-    <h4>This is a heading 4</h4>
-    <h5>This is a heading 5</h5>
-    <h6>This is a heading 6</h6>
-  </body>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title>Albanian culture recipes!</title>
+    </head>
+    <body>
+        <h1 id='header'>Recipes from Albanian culture!</h1>
+        <img src='images/flag-of-kosovo.jpg' alt='a talented chef by the name of boyardee' style="width:800px;height:450px;">
+        <h3 id='image label'>A collection of recipes from pop culture!</h3>
+        <div>
+            <ul>
+                <li><a href='./Ushqimet/Flia.html'>Flia</a></li>
+                <li><a href="./Ushqimet/Specatembushura.html">Specat e mbushura</a></li>
+                <li><a href="./Ushqimet/piemonade.html">Piemonade</a></li>
+            </ul>
+        </div>
+        <a href="#header">Return to top</a>
+    </body>
 </html>
